--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@react-google-maps/api": "^2.17.0",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
@@ -37,7 +38,5 @@
       "last 1 safari version"
     ]
   },
-  "devDependencies": {
-    "google-map-react": "^2.2.0"
-  }
+  "devDependencies": {}
 }
